re PR c++/61046 (ICE in lookup_field_1, at cp/search.c:384)

PR c++/61046
	* decl.c (reshape_init_class): Handle un-folded
	constant-expressions.

From-SVN: r211160